src/snapshots/jsonptr__assign__toml__tests__test@4-data.snap
---
source: src/assign.rs
description: "test #4 - asserting that the TOML data is as expected after assignment"
info:
  data: {}
  ptr: /
  assign: foo
---
{ "" = "foo" }
