src/snapshots/jsonptr__assign__toml__tests__test@6-data.snap
---
source: src/assign.rs
description: "test #6 - asserting that the TOML data is as expected after assignment"
info:
  data: data
  ptr: /-
  assign: 34
---
[34]
