src/snapshots/jsonptr__assign__toml__tests__test@7-data.snap
---
source: src/assign.rs
description: "test #7 - asserting that the TOML data is as expected after assignment"
info:
  data:
    foo: bar
  ptr: /foo/-
  assign: baz
---
{ foo = ["baz"] }
