src/snapshots/jsonptr__assign__toml__tests__test@8-data.snap
---
source: src/assign.rs
description: "test #8 - asserting that the TOML data is as expected after assignment"
info:
  data: {}
  ptr: /0
  assign: foo
---
{ 0 = "foo" }
