src/snapshots/jsonptr__assign__toml__tests__test@8-result.snap
---
source: src/assign.rs
description: "test #8 asserting that the replaced TOML data returned from the assignment is as expected"
info:
  data: {}
  ptr: /0
  assign: foo
---
Ok(
    None,
)
