src/snapshots/jsonptr__assign__toml__tests__test@9-data.snap
---
source: src/assign.rs
description: "test #9 - asserting that the TOML data is as expected after assignment"
info:
  data: 21
  ptr: /1
  assign: foo
---
{ 1 = "foo" }
