src/snapshots/jsonptr__assign__toml__tests__test@9-result.snap
---
source: src/assign.rs
description: "test #9 asserting that the replaced TOML data returned from the assignment is as expected"
info:
  data: 21
  ptr: /1
  assign: foo
---
Ok(
    Some(
        Integer(
            21,
        ),
    ),
)
